--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
+<!doctype html>
 
+<html lang="en-US">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title>
+      This is a Test Website
+    </title>
+  </head>
+    
+  <body>
+  
+  </body>
+</html?
