--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
      that's text, images, videos, games, playable audio tracks or whatever else.  -->
     
   <body>
+     <img src="internet.jpg" alt="" />
   
   </body>
 </html?
